refactor: complete code cleanup from simplify review
- Use HttpConstants.HTTP_TOO_MANY_REQUESTS in RateLimitInterceptor JSON body
- Use FileConstants.ALLOWED_IMAGE_TYPES in FileContentValidator and FileStorageProperties
- Add trailing newlines to all new constant files (POSIX standard)